--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "CheetahO/cheetaho-php",
+    "name": "cheetaho/cheetaho-php",
     "description": "CheetahO php library",
     "url":"http://cheetaho.com",
     "license": "MIT",
